release 0.3 (2007-10-xx)
- Fixed issue 8: apt tool silently overwrites existing web.xml by default
  The "noservlet" option used with the WebResourcesProcessorTask ant task
  has been removed so that by default Servlet is not assumed no overriding 
  of a web.xml occurs. A new option "servlet" replaces the old option and is 
  required to be set for the ant task (and apt tool) to generate a web.xml.
- Fixed issue 2: URI path matching should operate on the encoded path
  https://jersey.dev.java.net/issues/show_bug.cgi?id=2
- Integrated JSR 311 API 0.3.
  The class javax.ws.rs.core.UriBuilder is implemented. This is the preferred
  way to create URIs.
  Method names on javax.ws.rs.core.UriInfo were modified, the string "URI"
  or "Uri" was removed.
  The methods javax.ws.rs.ext.EntityProvider#readFrom/writeTo take
  a MediaType as a paramater, which corresponds to the "Content-Type"
  HTTP header field.
- Correctly support the writing of responses for the method signature:
    void <method>(HttpRequestContext, HttpResponseContext)
  this includes the method signature for resources that implement the interface
  com.sun.ws.rest.api.core.WebResource.
  An entity may be directly written by the application by obtaining an 
  OutputStream from the HttpResponseContext.getOutputStream() method.
- New SPI com.sun.ws.rest.spi.resource.* replaces com.sun.ws.rest.spi.resolver.*
  Supports addition of new resource providers that are responsible for creating 
  resource class instances and managing their lifecycle. The provider for a 
  particular resource class is set via the ResourceFactory meta-annotation, 
  see com.sun.ws.rest.spi.resource.Singleton for an example of its usage. 
  Default lifecycle for resource class instances is per-request, the prior 
  behaviour can be obtained by annotating a resource class with 
  com.sun.ws.rest.spi.resource.Singleton. Resource class constructors with a 
  per-request lifecycle can now have the same parameters as methods annotated 