@@ -20,13 +20,15 @@
  *     "Portions Copyrighted [year] [name of copyright owner]"
  */
 
-package com.sun.ws.rest.impl;
+package com.sun.ws.rest.spi.container;
 
 import com.sun.ws.rest.api.core.UriComponent;
+import com.sun.ws.rest.impl.MultivaluedMapImpl;
+import com.sun.ws.rest.impl.RequestHttpHeadersImpl;
+import com.sun.ws.rest.impl.ResponseBuilderImpl;
 import com.sun.ws.rest.impl.http.header.reader.HttpHeaderReader;
 import com.sun.ws.rest.impl.model.HttpHelper;
 import com.sun.ws.rest.impl.response.Responses;
-import com.sun.ws.rest.spi.container.ContainerRequest;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
@@ -56,7 +58,7 @@ import javax.ws.rs.ext.ProviderFactory;
  * The following are required by a concrete implementation when constructed
  * or before the instance is passed to the runtime.
  * <ul>
- * <li>The two protected variables baseUri and completeUri must be correctly
+ * <li>The two protected fields baseUri and completeUri must be correctly
  * set.</li>
  * <li>The HTTP headers must be set by calling the method
  * {@link #getRequestHeaders} and copying the container specific headers
@@ -64,7 +66,7 @@ import javax.ws.rs.ext.ProviderFactory;
  * </ul>
  * @author Paul.Sandoz@Sun.Com
  */
-public abstract class HttpRequestContextImpl implements ContainerRequest {
+public abstract class AbstractContainerRequest implements ContainerRequest {
     
     private final String method;
     private final InputStream entity;
@@ -137,7 +139,7 @@ public abstract class HttpRequestContextImpl implements ContainerRequest {
      * @param method the HTTP method
      * @param entity the InputStream of the request entity
      */
-    protected HttpRequestContextImpl(String method, InputStream entity) {
+    protected AbstractContainerRequest(String method, InputStream entity) {
         this.method = method;
         this.headers = new RequestHttpHeadersImpl();
         this.encodedTemplateValues = new MultivaluedMapImpl();
