@@ -27,8 +27,8 @@ import javax.ws.rs.UriTemplate;
 import com.sun.ws.rest.api.core.HttpRequestContext;
 import com.sun.ws.rest.api.core.ResourceConfig;
 import com.sun.ws.rest.api.core.WebResource;
-import com.sun.ws.rest.impl.HttpRequestContextImpl;
-import com.sun.ws.rest.impl.HttpResponseContextImpl;
+import com.sun.ws.rest.spi.container.AbstractContainerRequest;
+import com.sun.ws.rest.spi.container.AbstractContainerResponse;
 import com.sun.ws.rest.impl.TestHttpRequestContext;
 import com.sun.ws.rest.impl.TestHttpResponseContext;
 import com.sun.ws.rest.impl.test.util.TestingResourceConfig;
@@ -148,9 +148,9 @@ public class WebApplicationTest extends TestCase {
             ? path.substring(1) : path;
 
         ByteArrayInputStream e = new ByteArrayInputStream(content.getBytes());
-        HttpRequestContextImpl request = new TestHttpRequestContext(method, e, 
+        AbstractContainerRequest request = new TestHttpRequestContext(method, e, 
                 path, "/");
-        HttpResponseContextImpl response = new TestHttpResponseContext(request);
+        AbstractContainerResponse response = new TestHttpResponseContext(request);
 
         a.handleRequest(request, response);
         if (response.getEntity() != null) {
